Fix broken script tag and encoding corruption in portfolio page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Staff Engineering Product Manager specializing in Product Analytics & In-App Content at Splunk (Cisco).">
 
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -953,7 +953,7 @@
                     that feel natural to users and actionable to product teams.
                 </p>
                 <p>
-                    I create the systems that let teams self-serve insights at scaleâand I
+                    I create the systems that let teams self-serve insights at scale—and I
                     jump in myself to analyze, teach, and guide when the situation calls for it.
                 </p>
             </div>
@@ -973,7 +973,7 @@
                             Staff Engineering Product Manager
                         </h3>
                         <span class="text-sm text-gray-600 font-medium tracking-wide">
-                            Feb 2025 â Present
+                            Feb 2025 — Present
                         </span>
                     </div>
                     <p class="text-indigo-700 font-medium mb-3">Splunk (Cisco)</p>
@@ -993,7 +993,7 @@
                             Senior Program Manager, Digital Adoption
                         </h3>
                         <span class="text-sm text-gray-600 font-medium tracking-wide">
-                            Sep 2020 â Feb 2025
+                            Sep 2020 — Feb 2025
                         </span>
                     </div>
                     <p class="text-indigo-700 font-medium mb-3">Jamf</p>
@@ -1010,7 +1010,7 @@
                             Enterprise Customer Success Manager
                         </h3>
                         <span class="text-sm text-gray-600 font-medium tracking-wide">
-                            2019 â 2020
+                            2019 — 2020
                         </span>
                     </div>
                     <p class="text-indigo-700 font-medium mb-3">Jamf</p>
@@ -1107,7 +1107,7 @@
         <!-- Footer -->
         <footer class="text-center pt-4">
             <p class="text-sm text-gray-600">
-                Â© 2026 Brandon Noskoviak
+                © 2026 Brandon Noskoviak
             </p>
         </footer>
 
@@ -1296,13 +1296,13 @@
                 target: '[data-tour="hero"]',
                 meta: 'In-App Content',
                 title: 'Welcome to the Tour',
-                content: 'This is an example of in-app content â contextual guidance that helps users understand a product. Click "Next" to explore each section, or close anytime.'
+                content: 'This is an example of in-app content — contextual guidance that helps users understand a product. Click "Next" to explore each section, or close anytime.'
             },
             {
                 target: '[data-tour="about"]',
                 meta: 'Section 1 of 4',
                 title: 'About Section',
-                content: 'Good in-app content surfaces at the right moment. This section introduces who I am and what I do â short, scannable, and immediately useful.'
+                content: 'Good in-app content surfaces at the right moment. This section introduces who I am and what I do — short, scannable, and immediately useful.'
             },
             {
                 target: '[data-tour="experience"]',
@@ -1585,10 +1585,10 @@
                 doNotTrack: nav.doNotTrack === '1' ? 'Enabled' : 'Disabled',
 
                 // Screen & Display
-                screenResolution: `${screen.width} Ã ${screen.height}`,
+                screenResolution: `${screen.width} × ${screen.height}`,
                 colorDepth: `${screen.colorDepth}-bit`,
                 pixelRatio: window.devicePixelRatio || 1,
-                viewportSize: `${window.innerWidth} Ã ${window.innerHeight}`,
+                viewportSize: `${window.innerWidth} × ${window.innerHeight}`,
 
                 // Time & Location
                 timezone: Intl.DateTimeFormat().resolvedOptions().timeZone,
