Add new post link for portfolio site article

--- a/writing/index.html
+++ b/writing/index.html
@@ -131,7 +131,17 @@
 
         <!-- Posts -->
         <div class="space-y-1">
-            <a href="/writing/shopify-malware-ai-agent.html" class="post-link block rounded-lg px-4 py-4 -mx-4">
+            <a href="/writing/building-portfolio-with-ai.html" class="post-link block rounded-lg px-4 py-4 -mx-4">
+                    <div class="flex items-start justify-between gap-4">
+                        <div>
+                            <h2 class="text-base font-semibold text-gray-900 mb-1">I Built My Entire Portfolio Site Through Conversation</h2>
+                            <p class="text-sm text-gray-500 leading-relaxed">What happens when a product manager who hasn’t written frontend code in years decides to build a portfolio site using only an AI agent.</p>
+                        </div>
+                        <time class="text-xs text-gray-400 mt-1 whitespace-nowrap">Feb 20</time>
+                    </div>
+                </a>
+
+                <a href="/writing/shopify-malware-ai-agent.html" class="post-link block rounded-lg px-4 py-4 -mx-4">
                 <div class="flex items-start justify-between gap-4">
                     <div>
                         <h2 class="text-base font-semibold text-gray-900 mb-1">How I Used an AI Agent to Discover Malware, Transfer My Domain, and Fight Shopify Support</h2>
