Add RSS feed link to index.html

--- a/writing/index.html
+++ b/writing/index.html
@@ -68,7 +68,8 @@
             box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.1);
         }
     </style>
-</head>
+    <link rel="alternate" type="application/rss+xml" title="Brandon Noskoviak" href="/feed.xml">
+  </head>
 <body class="font-charter text-gray-800 antialiased">
 
     <!-- Navigation -->
