Add RSS feed link to HTML head

--- a/writing/building-portfolio-with-ai.html
+++ b/writing/building-portfolio-with-ai.html
@@ -131,7 +131,8 @@
             margin-top: 0.25rem;
         }
     </style>
-</head>
+    <link rel="alternate" type="application/rss+xml" title="Brandon Noskoviak" href="/feed.xml">
+  </head>
 <body class="antialiased">
 
     <!-- Navigation -->
