Add RSS feed link and writing section
Added an RSS feed link and a new writing section with two articles.

--- a/index.html
+++ b/index.html
@@ -897,7 +897,8 @@
         }
 
     </style>
-</head>
+    <link rel="alternate" type="application/rss+xml" title="Brandon Noskoviak" href="/feed.xml">
+  </head>
 <body class="font-charter text-gray-800 antialiased">
     <!-- Navigation -->
     <nav class="fixed top-0 left-0 right-0 z-50" style="background:rgba(255,255,255,0.45);backdrop-filter:blur(12px);-webkit-backdrop-filter:blur(12px);border-bottom:1px solid rgba(255,255,255,0.6);box-shadow:0 4px 24px rgba(0,0,0,0.04)">
@@ -1056,6 +1057,44 @@
                 <span class="glass-pill px-4 py-2 rounded-full text-sm font-medium text-gray-900" data-track="skill" data-track-value="Cross-functional Leadership">
                     Cross-functional Leadership
                 </span>
+            </div>
+        </section>
+
+        
+        <!-- Writing Section -->
+        <section class="glass-card rounded-lg p-8 md:p-10 mb-10" data-tour="writing">
+            <h2 class="heading-charter text-2xl mb-8">
+                Latest Writing
+            </h2>
+            <div class="space-y-6">
+                <a href="/writing/shopify-malware-ai-agent.html" class="block group" data-track="writing" data-track-value="shopify-malware">
+                    <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
+                        <h3 class="text-lg font-semibold text-gray-900 group-hover:text-indigo-600 transition-colors">
+                            How I Used an AI Agent to Discover Malware, Transfer My Domain, and Fight Shopify Support
+                        </h3>
+                        <time class="text-sm text-gray-400 whitespace-nowrap pt-1">Feb 21, 2026</time>
+                    </div>
+                    <p class="text-gray-600 mt-2 text-sm leading-relaxed">
+                        A real-world case study of Claude's Cowork mode managing an entire incident response — from discovery to remediation to customer support negotiation.
+                    </p>
+                </a>
+                <div class="border-t border-gray-200/60"></div>
+                <a href="/writing/building-portfolio-with-ai.html" class="block group" data-track="writing" data-track-value="building-portfolio">
+                    <div class="flex flex-col sm:flex-row sm:items-start sm:justify-between gap-1">
+                        <h3 class="text-lg font-semibold text-gray-900 group-hover:text-indigo-600 transition-colors">
+                            I Built My Entire Portfolio Site Through Conversation
+                        </h3>
+                        <time class="text-sm text-gray-400 whitespace-nowrap pt-1">Feb 20, 2026</time>
+                    </div>
+                    <p class="text-gray-600 mt-2 text-sm leading-relaxed">
+                        How I used Anthropic's Claude in Cowork mode to build a 70K single-file portfolio site with glassmorphism, scroll physics, analytics, and an interactive tour — all through conversation.
+                    </p>
+                </a>
+            </div>
+            <div class="mt-8 pt-6 border-t border-gray-200/60">
+                <a href="/writing/" class="text-sm text-indigo-500 hover:text-indigo-700 transition-colors font-medium">
+                    View all posts &rarr;
+                </a>
             </div>
         </section>
 
