Add 2026 tracks to music timeline (5 new local recordings)

--- a/music/index.html
+++ b/music/index.html
@@ -63,6 +63,67 @@
         </section>
         <section class="relative">
             <div class="timeline-line"></div>
+            <!-- 2026 -->
+            <div class="mb-12">
+                <div class="year-marker pl-14 sm:pl-16 mb-6">
+                    <h2 class="heading-charter text-xl text-gray-900">2026</h2>
+                </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot cover top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">Elliott Smith &mdash; Twilight</h3>
+                        <span class="tag-cover text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Cover</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">Jan 2026</p>
+                    <audio controls preload="none" src="/music/media/elliott-smith-twilight.mp3"></audio>
+                </div>
+            </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">The Devil Wears a Suit and Tie</h3>
+                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">2026</p>
+                    <audio controls preload="none" src="/music/media/the-devil-wears-a-suit-and-tie.mp3"></audio>
+                </div>
+            </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">Testing GarageBand</h3>
+                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">2026</p>
+                    <audio controls preload="none" src="/music/media/testing-garageband.mp3"></audio>
+                </div>
+            </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot cover top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">Iron &amp; Wine &mdash; Naked As We Came</h3>
+                        <span class="tag-cover text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Cover</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">2026</p>
+                    <audio controls preload="none" src="/music/media/iron-and-wine-naked-as-we-came.mp3"></audio>
+                </div>
+            </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">Playing with tracks on my Tele</h3>
+                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">2026 &middot; Telecaster</p>
+                    <audio controls preload="none" src="/music/media/playing-with-tracks-on-my-tele.mp3"></audio>
+                </div>
+            </div>
+            </div>
             <!-- 2016 -->
             <div class="mb-12">
                 <div class="year-marker pl-14 sm:pl-16 mb-6">
