--- a/music/index.html
+++ b/music/index.html
@@ -80,11 +80,11 @@
                 </div>
             </div>
             <div class="relative pl-14 sm:pl-16 mb-8">
-                <div class="timeline-dot top-1"></div>
+                <div class="timeline-dot cover top-1"></div>
                 <div class="glass-card rounded-lg p-5">
                     <div class="flex items-start justify-between gap-2 mb-1">
-                        <h3 class="font-semibold text-gray-900">The Devil Wears a Suit and Tie</h3>
-                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                        <h3 class="font-semibold text-gray-900">Colter Wall &mdash; The Devil Wears a Suit and Tie</h3>
+                        <span class="tag-cover text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Cover</span>
                     </div>
                     <p class="text-sm text-gray-500 mb-2">2026</p>
                     <audio controls preload="none" src="/music/media/the-devil-wears-a-suit-and-tie.mp3"></audio>
