--- a/music/index.html
+++ b/music/index.html
@@ -60,6 +60,64 @@
                 <a href="https://soundcloud.com/noskoviak" target="_blank" class="text-indigo-500 hover:text-indigo-700 transition-colors">SoundCloud &nearr;</a>
                 <a href="https://www.youtube.com/@adultBrandon" target="_blank" class="text-indigo-500 hover:text-indigo-700 transition-colors">YouTube &nearr;</a>
             </div>
+            <!-- 2008 -->
+            <div class="mb-12">
+                <div class="year-marker pl-14 sm:pl-16 mb-6">
+                    <h2 class="heading-charter text-xl text-gray-900">~2008</h2>
+                </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">Guitar clip 1</h3>
+                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">circa 2008 &middot; 0:38</p>
+                    <div class="embed-container aspect-video">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/3JB_7P2lw1Q" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">Guitar clip 2</h3>
+                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">circa 2008 &middot; 1:00</p>
+                    <div class="embed-container aspect-video">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nRdCnzE94YI" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">Guitar clip 3</h3>
+                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">circa 2008 &middot; 1:24</p>
+                    <div class="embed-container aspect-video">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/KkiV_SGJ6bM" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">Guitar clip 4</h3>
+                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">Dec 2008 &middot; 2:43</p>
+                    <div class="embed-container aspect-video">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XcSPEzw3n9A" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+            </div>
         </section>
         <section class="relative">
             <div class="timeline-line"></div>
@@ -345,6 +403,64 @@
                     <p class="text-sm text-gray-500 mb-2">YouTube &middot; Nov 2010 &middot; 5:52 &middot; <span class="italic">"a little diddy i wrote when i was a kid"</span></p>
                     <div class="embed-container aspect-video">
                         <iframe width="100%" height="100%" src="https://www.youtube.com/embed/2AyiHprzI9w" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <!-- 2008 -->
+            <div class="mb-12">
+                <div class="year-marker pl-14 sm:pl-16 mb-6">
+                    <h2 class="heading-charter text-xl text-gray-900">~2008</h2>
+                </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">Guitar clip 1</h3>
+                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">circa 2008 &middot; 0:38</p>
+                    <div class="embed-container aspect-video">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/3JB_7P2lw1Q" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">Guitar clip 2</h3>
+                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">circa 2008 &middot; 1:00</p>
+                    <div class="embed-container aspect-video">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nRdCnzE94YI" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">Guitar clip 3</h3>
+                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">circa 2008 &middot; 1:24</p>
+                    <div class="embed-container aspect-video">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/KkiV_SGJ6bM" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">Guitar clip 4</h3>
+                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">Dec 2008 &middot; 2:43</p>
+                    <div class="embed-container aspect-video">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XcSPEzw3n9A" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
                     </div>
                 </div>
             </div>
