--- a/music/index.html
+++ b/music/index.html
@@ -355,6 +355,20 @@
                 <div class="timeline-dot top-1"></div>
                 <div class="glass-card rounded-lg p-5">
                     <div class="flex items-start justify-between gap-2 mb-1">
+                        <h3 class="font-semibold text-gray-900">the guitar has been drinking</h3>
+                        <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
+                    </div>
+                    <p class="text-sm text-gray-500 mb-2">Aug 2008 &middot; 0:56</p>
+                    <p class="text-xs text-gray-400 italic mb-3">"this is for corey deguia. its poorly recorded and its 3am so its not perfect."</p>
+                    <div class="embed-container aspect-video">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/twwUw_JoNUg" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="relative pl-14 sm:pl-16 mb-8">
+                <div class="timeline-dot top-1"></div>
+                <div class="glass-card rounded-lg p-5">
+                    <div class="flex items-start justify-between gap-2 mb-1">
                         <h3 class="font-semibold text-gray-900">Guitar clip 1</h3>
                         <span class="tag-original text-xs px-2 py-0.5 rounded-full whitespace-nowrap">Original</span>
                     </div>
