--- a/writing/index.html
+++ b/writing/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Writing on AI agents, product management, and building things.">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        tailwind.config = {
+        tailwind.config = 
             theme: {
                 extend: {
                     fontFamily: {
@@ -69,6 +69,11 @@
         }
     </style>
     <link rel="alternate" type="application/rss+xml" title="Brandon Noskoviak" href="/feed.xml">
+      <script>
+        // Prevent flash: apply theme before render
+        (function(){var t=localStorage.getItem('theme')||(window.matchMedia('(prefers-color-scheme:dark)').matches?'dark':'light');document.documentElement.setAttribute('data-theme',t)})();
+    </script>
+    <script src="/shared/theme.js" defer></script>
   </head>
 <body class="font-charter text-gray-800 antialiased">
 
